--- a/ClothWeb/Cloth.html
+++ b/ClothWeb/Cloth.html
@@ -2,15 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title></title>
-    <script src="Cloth.js"></script>
     <link href="Cloth.css" rel="stylesheet" />
 </head>
 <body>
-    <canvas id="c"></canvas>
-
-
-
-
-
+    <canvas id="canvas"></canvas>
+    <script src="Cloth.js"></script>
 </body>
 </html>
